--- a/webview/workflow/components/Flow.module.css
+++ b/webview/workflow/components/Flow.module.css
@@ -1,1 +1,43 @@
+:global(.react-flow__controls-button) {
+    background-color: var(--vscode-button-secondaryBackground);
+    color: var(--vscode-button-secondaryForeground);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+:global(.react-flow__controls-button:hover) {
+    background-color: var(--vscode-button-secondaryHoverBackground);
+    color: var(--vscode-button-secondaryForeground);
+    cursor: pointer;
+}
+
+:global(.react-flow__attribution) {
+    background-color: var(--vscode-button-secondaryBackground);
+    color: var(--vscode-button-secondaryForeground);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+:global(.react-flow__handle) {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: var(--vscode-editor-background);
+    border: 2px solid var(--vscode-editor-foreground);
+}
+
+:global(.react-flow__handle-top, .react-flow__handle-bottom) {
+    margin-left: -7px;
+}
+
+:global(.react-flow__handle-right, .react-flow__handle-left) {
+    margin-top: -7px;
+}
+
+:global(.react-flow__node.selected) { z-index: 10 !important; }
+
+:global(.react-flow__selection) {
+    background: rgba(var(--vscode-focusBorder-rgb), 0.1);
+    border: 1px solid var(--vscode-focusBorder);
+}
+
 .controls { display: flex; flex-direction: column; }
+
